# MechatronicArmAnalyzer

./: CMakeLists.txt  Makefile  README.md  main.c
model/: CMakeLists.txt  a.out  model.c  model.h
